Add super useful health check
